# sweepntime

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  RESOURCES.md  asan_suppressions.txt  flake.nix  justfile  valgrind_suppressions.txt
.github/workflows/: cla.yml
assets/: color_palette.json  color_palette_2.json
assets/images/cursor/: default.cur  pointer.cur  text.cur
lib/: clay.h  clay_renderer.c  clay_renderer.h  hsluv.h
src/: assets.c  assets.h  components.h  config.h  hsluv.c  main.c  object.c  object.h  physics.c  physics.h  state.c  state.h  ui_utils.c  ui_utils.h  utils.c  utils.h
src/systems/: debug.c  debug.h  friction.c  friction.h  input.c  input.h  movement.c  movement.h  physics.c  physics.h  physics_step.c  physics_step.h  push.c  push.h  rendering.c  rendering.h  sync_physics_to_ecs.c  sync_physics_to_ecs.h  ui.c  ui.h
src/ui/: button.c  button.h  main_menu.c  main_menu.h
